// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ooth-prisma can get user by fields 1`] = `
Object {
  "_id": "<obfuscated>",
  "foo": Object {
    "bar": "baz",
  },
  "foo2": Object {
    "bar2": "baz2",
  },
  "foo3": Object {
    "bar3": "baz3",
  },
}
`;

exports[`ooth-prisma can get user by value 1`] = `
Object {
  "_id": "<obfuscated>",
  "foo": Object {
    "bar": "baz",
  },
  "foo2": Object {
    "bar2": "baz2",
  },
}
`;

exports[`ooth-prisma can insert user and get it 1`] = `
Object {
  "_id": "<obfuscated>",
  "foo": Object {
    "baz": "bar",
  },
}
`;

exports[`ooth-prisma can update user 1`] = `
Object {
  "_id": "<obfuscated>",
  "foo": Object {
    "baz": "bar",
    "baz2": "bar2",
  },
  "foo2": Object {
    "baz": "bar2",
  },
}
`;
